Thumbnail Spacing Bug
Fixes #355.

Intermittent issue with spacing on some resources with images was finally
traced to be due to variations in height of the thumbnail divs. If the first
image in the series had the tallest div (due to the longest description under
the image), then the first div in the second row would be placed to the right
of it in order to appear as close to the top of the page as possible.

Setting the height of these divs to always be 400 pixels (sufficient to
contain the largest one we have that I can find...we shouldn't need more
space) resolves the issue since now the second row still tries going as
high on the page as possible, but that's always possible in the leftmost
column now.

--- a/hub/static/scss/base.scss
+++ b/hub/static/scss/base.scss
@@ -452,3 +452,8 @@ li a {
     padding: 15px 15px 0 15px;
     margin: auto;
 }
+
+// Set height for image thumbnail blocks to prevent spacing issues
+.thumbnail-style {
+    height: 400px;
+}
